envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 9901
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  host_rewrite: backend
                  cluster: backend
          http_filters:
          - name: envoy.router
  clusters:
  - name: backend
    connect_timeout: 1.99s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    hosts:
    - socket_address:
        address: backend
        port_value: 8081
    circuit_breakers:
      thresholds:
        max_connections: 48  # not for HTTP/2
        max_pending_requests: 48  # not for HTTP/2
        # max_requests: 48  # not for HTTP/1.1
        max_retries: 1
